--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     </main>
     <section>
         <article>
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Top view of a desk with a notebook in the middle surrounded by a laptop, cup of coffee, and an assortment of colored pencils" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desk top with a notebook in the middle surrounded by a laptop computer, a cup of coffee, and an assortment of colored pencils in a can" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article>
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="An individual sitting at a desk, working at a laptop computer, and checking their cellphone."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article>
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Conference table covered with various marketing materials and people working around it."/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <aside>
         <article>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="The top half of a gear in a funnel with an arrow pointing down depicting the flow to a circle with a dollar sign in the middle of it."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
         <article>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="The shoulders and upper-torso of a characature of a person wearing a tie and having a light bulb for a head with sound waves emanating from it's sides."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
         <article>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Three circles of alternating colors with a dollar sign in the center of each in front of a gear."/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
