--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 
 <body>
     <header>
-        <h1>Hori<span>seo</span>n</h1>
-        <ul>
-            <li>
-                <a href="#search-engine-optimization">Search Engine Optimization</a>
-            </li>
-            <li>
-                <a href="#online-reputation-management">Online Reputation Management</a>
-            </li>
-            <li>
-                <a href="#social-media-marketing">Social Media Marketing</a>
-            </li>
-        </ul>
+        <h1>Hori<strong>seo</strong>n</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="Group of people in a meeting around a table."/>
@@ -72,7 +74,7 @@
         </article>
     </aside>
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
